Реализовать отображения дат бронирования при просмотре вещей