@@ -2,9 +2,14 @@ package ru.practicum.shareit.item.service;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import ru.practicum.shareit.booking.dto.BookingShortDto;
+import ru.practicum.shareit.booking.mapper.BookingMapper;
+import ru.practicum.shareit.booking.repository.BookingRepository;
 import ru.practicum.shareit.exception.NotFoundException;
+import ru.practicum.shareit.item.dto.ItemWithBookingDto;
 import ru.practicum.shareit.item.mapper.ItemMapper;
 import ru.practicum.shareit.item.dto.ItemCreateDto;
 import ru.practicum.shareit.item.dto.ItemDto;
@@ -14,14 +19,16 @@ import ru.practicum.shareit.item.repository.ItemRepository;
 import ru.practicum.shareit.user.model.User;
 import ru.practicum.shareit.user.repository.UserRepository;
 
-import java.util.Collection;
-import java.util.Collections;
+import java.time.LocalDateTime;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
 @Slf4j
 @RequiredArgsConstructor
 public class ItemServiceImpl implements ItemService {
+
+    private final BookingRepository bookingRepository;
 
     private final ItemRepository itemRepository;
     private final UserRepository userRepository;
@@ -66,10 +73,45 @@ public class ItemServiceImpl implements ItemService {
     }
 
     @Override
-    public Collection<ItemDto> getItems(Long userId) {
-        return itemRepository.findByOwner_Id(userId).stream()
-                .map(ItemMapper::toItemDto)
-                .collect(Collectors.toList());
+    public Collection<ItemWithBookingDto> getItems(Long userId) {
+        User user = getUser(userId);
+
+        // Все вещи пользователя
+        List<ItemWithBookingDto> items;
+        items = itemRepository.findByOwner_Id(userId).stream()
+                .map(ItemMapper::toItemWithDateDto)
+                .toList();
+
+        // Все бронирования вещей пользователя
+        List<BookingShortDto> bokings;
+        bokings = bookingRepository.findByItem_Owner(user, Sort.by(Sort.Direction.DESC, "start"))
+                .stream()
+                .map(BookingMapper::toBookingShortDto)
+                .toList();
+
+        //Результат: вещь с информацией о последнем и следующем бронировании
+        Optional<BookingShortDto> bookingLastShortDto;
+        Optional<BookingShortDto> bookingNextShortDto;
+        List<ItemWithBookingDto> results = new ArrayList<>();
+
+        for (ItemWithBookingDto item : items) {
+            bookingLastShortDto = bokings.stream()
+                    .filter(b -> Objects.equals(b.getItemId(), item.getId())) //Условие на вещь
+                    .filter(b -> !b.getStart().isAfter(LocalDateTime.now())) //Прошедшие бронирования
+                    .max(Comparator.comparing(BookingShortDto::getStart));
+
+            bookingNextShortDto = bokings.stream()
+                    .filter(b -> Objects.equals(b.getItemId(), item.getId())) //Условие на вещь
+                    .filter(b -> b.getStart().isAfter(LocalDateTime.now())) //Будущие бронирования
+                    .min(Comparator.comparing(BookingShortDto::getStart));
+
+            bookingLastShortDto.ifPresent(item::setLastBooking);
+            bookingNextShortDto.ifPresent(item::setNextBooking);
+
+            results.add(item);
+        }
+
+        return results;
     }
 
     @Override
